--- a/app/index-async.html
+++ b/app/index-async.html
@@ -45,14 +45,27 @@
   <link rel="stylesheet" href="app.css">
 </head>
 <body ng-cloak>
-  <ul class="menu">
-    <li><a href="#!/view1">view1</a></li>
-    <li><a href="#!/view2">view2</a></li>
-  </ul>
 
-  <div ng-view></div>
+  <div class="container">
+    <div class="form">
+      <div class="level">
+        <div class="field">
+          <text-input></text-input>
+        </div>
+        <div class='level-right'>
+          <div class="field">
+            <div class="control">
+              <button class="button">Submit</button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="field">
+        <user-select></user-select>
+      </div>
+    </div>
+  </div>
 
-  <div>AngularJS seed app: v<span app-version></span></div>
 
 </body>
 </html>
