works with $apply errors

--- a/app/index.html
+++ b/app/index.html
@@ -33,6 +33,7 @@
   <script src="app.js"></script>
   <script src='userSelect/user-select.component.js'></script>
   <script src='textInput/text-input.component.js'></script>
+  <script src='comments/comments.component.js'></script>
   <script src="core/version/version.js"></script>
   <script src="core/version/version-directive.js"></script>
   <script src="core/version/interpolate-filter.js"></script>
